Fixed some blog templating
main.py:
	- Added propper editing for blog posts
	- Added some error handling for retrieving images
	- Reformatted BlogDBHandler a little
base.css:
	- Added minimum font-size with calc()
home.html:
	- Fixed some variables I messed up

--- a/static/base.css
+++ b/static/base.css
@@ -385,7 +385,7 @@ input[type=submit]:hover,
 
 body {
     font-family: "tondo", 'Lato', sans-serif;
-    font-size: 2.5vmin;
+    font-size: calc(10px + .5vmax);
 }
 
 h1 {
